# garlic

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
docs/source/: conf.py
docs/source/autogen/: garlic.client.rst  garlic.exc.rst  garlic.utils.rst
examples/: exit_policies.py  relay_weight_visualisation.py  specific_lookup.py  summary.py
garlic/: __init__.py  client.py  exc.py  types.py  utils.py
