[tool.poetry]
name = "garlic"
version = "0.1.0"
description = "Onionoo API wrapper."
authors = ["birb007 <25516647+birb007@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
asks = "^2.3.7"
anyio = "^1.3.1"

[tool.poetry.dev-dependencies]
sphinx = "^3.1.1"
sphinx_py3doc_enhanced_theme = "^2.4.0"
sphinx-autodoc-typehints = "^1.10.3"
trio = "^0.16.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
